src/main/java/com/example/demo/__core/errors/Ex401.java
package com.example.demo.__core.errors;

public class Ex401 extends RuntimeException{
	public Ex401(String msg) {
		super(msg);
	}
}

